--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -112,17 +112,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_07_Switch_Page" class="method navigator-link" hash-for-method="User_03_My_Account">User_03_My_Account</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_07_Switch_Page" class="method navigator-link" hash-for-method="User_03_Customer_Infor">User_03_Customer_Infor</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_07_Switch_Page" class="method navigator-link" hash-for-method="User_04_Switch_Page">User_04_Switch_Page</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_07_Switch_Page" class="method navigator-link" hash-for-method="User_05_Switch_Role">User_05_Switch_Role</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -159,9 +154,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="User_03_My_Account">
-                  </a> <!-- User_03_My_Account -->
-                  <span class="method-name">User_03_My_Account</span>
+                  <a name="User_03_Customer_Infor">
+                  </a> <!-- User_03_Customer_Infor -->
+                  <span class="method-name">User_03_Customer_Infor</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -169,13 +164,6 @@
                   <a name="User_04_Switch_Page">
                   </a> <!-- User_04_Switch_Page -->
                   <span class="method-name">User_04_Switch_Page</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="User_05_Switch_Role">
-                  </a> <!-- User_05_Switch_Role -->
-                  <span class="method-name">User_05_Switch_Role</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -233,32 +221,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
 data.setCell(0, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(0, 3, 3921);
+data.setCell(0, 3, 2765);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'User_02_Login')
+data.setCell(1, 1, 'User_04_Switch_Page')
 data.setCell(1, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(1, 3, 2763);
+data.setCell(1, 3, 2398);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'User_03_My_Account')
+data.setCell(2, 1, 'User_02_Login')
 data.setCell(2, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(2, 3, 509);
+data.setCell(2, 3, 1279);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'User_04_Switch_Page')
+data.setCell(3, 1, 'User_03_Customer_Infor')
 data.setCell(3, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(3, 3, 0);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'User_05_Switch_Role')
-data.setCell(4, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(4, 3, 0);
+data.setCell(3, 3, 498);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -291,27 +275,23 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">5186 ms</span>
+                <span class="method-start">4575 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">9108 ms</span>
+                <span class="method-start">7342 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">User_03_My_Account</span>
-                <span class="method-start">11871 ms</span>
+                <span class="method-name">User_03_Customer_Infor</span>
+                <span class="method-start">8622 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">User_04_Switch_Page</span>
-                <span class="method-start">12381 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">User_05_Switch_Role</span>
-                <span class="method-start">12382 ms</span>
+                <span class="method-start">9121 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">12383 ms</span>
+                <span class="method-start">11519 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
