--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,12 @@
                     <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_07_Switch_Page" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_08_Switch_Role" class="method navigator-link" hash-for-method="Role_01_User">Role_01_User</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_07_Switch_Page" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_07_Switch_Page" class="method navigator-link" hash-for-method="User_03_Customer_Infor">User_03_Customer_Infor</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_07_Switch_Page" class="method navigator-link" hash-for-method="User_04_Switch_Page">User_04_Switch_Page</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_08_Switch_Role" class="method navigator-link" hash-for-method="Role_02_Admin">Role_02_Admin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -135,35 +125,21 @@
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_07_Switch_Page</span>
+              <span class="class-name">com.nopcommerce.user.Level_08_Switch_Role</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="User_01_Register">
-                  </a> <!-- User_01_Register -->
-                  <span class="method-name">User_01_Register</span>
+                  <a name="Role_01_User">
+                  </a> <!-- Role_01_User -->
+                  <span class="method-name">Role_01_User</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="User_02_Login">
-                  </a> <!-- User_02_Login -->
-                  <span class="method-name">User_02_Login</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="User_03_Customer_Infor">
-                  </a> <!-- User_03_Customer_Infor -->
-                  <span class="method-name">User_03_Customer_Infor</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="User_04_Switch_Page">
-                  </a> <!-- User_04_Switch_Page -->
-                  <span class="method-name">User_04_Switch_Page</span>
+                  <a name="Role_02_Admin">
+                  </a> <!-- Role_02_Admin -->
+                  <span class="method-name">Role_02_Admin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -181,7 +157,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.Level_07_Switch_Page&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.Level_08_Switch_Role&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
 &lt;/suite&gt; &lt;!-- NopCommerce --&gt;
@@ -221,28 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'User_01_Register')
-data.setCell(0, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(0, 3, 2765);
+data.setCell(0, 1, 'Role_02_Admin')
+data.setCell(0, 2, 'com.nopcommerce.user.Level_08_Switch_Role')
+data.setCell(0, 3, 2626);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'User_04_Switch_Page')
-data.setCell(1, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(1, 3, 2398);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'User_02_Login')
-data.setCell(2, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(2, 3, 1279);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'User_03_Customer_Infor')
-data.setCell(3, 2, 'com.nopcommerce.user.Level_07_Switch_Page')
-data.setCell(3, 3, 498);
+data.setCell(1, 1, 'Role_01_User')
+data.setCell(1, 2, 'com.nopcommerce.user.Level_08_Switch_Role')
+data.setCell(1, 3, 1317);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -268,30 +236,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.Level_07_Switch_Page</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.Level_08_Switch_Role</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass(firefox)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">User_01_Register</span>
-                <span class="method-start">4575 ms</span>
+                <span class="method-name">Role_01_User</span>
+                <span class="method-start">4524 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">User_02_Login</span>
-                <span class="method-start">7342 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">User_03_Customer_Infor</span>
-                <span class="method-start">8622 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">User_04_Switch_Page</span>
-                <span class="method-start">9121 ms</span>
+                <span class="method-name">Role_02_Admin</span>
+                <span class="method-start">5842 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">11519 ms</span>
+                <span class="method-start">8469 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
