--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="977370">  <td>22/10/12 21:36:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_07_Switch_Page.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@38afe297]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@896644936</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/12 21:36:18</td>   <td>4570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@38afe297]">User_01_Register</td> 
-  <td>main@896644936</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/12 21:36:21</td>   <td>7337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@38afe297]">User_02_Login</td> 
-  <td>main@896644936</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/12 21:36:22</td>   <td>8617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_03_Customer_Infor()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@38afe297]">User_03_Customer_Infor</td> 
-  <td>main@896644936</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/12 21:36:22</td>   <td>9116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_04_Switch_Page()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@38afe297]">User_04_Switch_Page</td> 
-  <td>main@896644936</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/12 21:36:25</td>   <td>11514</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_07_Switch_Page.afterClass()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@38afe297]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@896644936</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/13 00:18:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_08_Switch_Role.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_08_Switch_Role@131ef10]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/13 00:18:37</td>   <td>4518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_08_Switch_Role.Role_01_User()[pri:0, instance:com.nopcommerce.user.Level_08_Switch_Role@131ef10]">Role_01_User</td> 
+  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/13 00:18:38</td>   <td>5836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_08_Switch_Role.Role_02_Admin()[pri:0, instance:com.nopcommerce.user.Level_08_Switch_Role@131ef10]">Role_02_Admin</td> 
+  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/13 00:18:40</td>   <td>8463</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_08_Switch_Role.afterClass()[pri:0, instance:com.nopcommerce.user.Level_08_Switch_Role@131ef10]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
 </table>
