--- a/test-output/old/NopCommerce/classes.html
+++ b/test-output/old/NopCommerce/classes.html
@@ -4,18 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.Level_08_Switch_Role</td>
+<td>com.nopcommerce.user.Level_09_Dynamic_Locator</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Role_02_Admin</td>
+<td>User_03_Dynamic_Page_01</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Role_01_User</td>
+<td>User_01_Register_Login</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>User_02_Switch_Page</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
