--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="977370">  <td>22/10/13 00:18:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_08_Switch_Role.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_08_Switch_Role@131ef10]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/13 00:18:37</td>   <td>4518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_08_Switch_Role.Role_01_User()[pri:0, instance:com.nopcommerce.user.Level_08_Switch_Role@131ef10]">Role_01_User</td> 
-  <td>main@726379593</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/13 00:18:38</td>   <td>5836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_08_Switch_Role.Role_02_Admin()[pri:0, instance:com.nopcommerce.user.Level_08_Switch_Role@131ef10]">Role_02_Admin</td> 
-  <td>main@726379593</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/13 00:18:40</td>   <td>8463</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_08_Switch_Role.afterClass()[pri:0, instance:com.nopcommerce.user.Level_08_Switch_Role@131ef10]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/18 23:43:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_09_Dynamic_Locator.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@265321659</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/18 23:43:13</td>   <td>2728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_01_Register_Login()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">User_01_Register_Login</td> 
+  <td>main@265321659</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/18 23:43:18</td>   <td>8071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_02_Switch_Page()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">User_02_Switch_Page</td> 
+  <td>main@265321659</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/18 23:43:35</td>   <td>24824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_03_Dynamic_Page_01()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">User_03_Dynamic_Page_01</td> 
+  <td>main@265321659</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/18 23:43:36</td>   <td>25864</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_09_Dynamic_Locator.afterClass()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@265321659</td>   <td></td> </tr>
 </table>
