--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">NopCommerce</th></tr>
-<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">9,175</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">27,014</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.nopcommerce.user.Level_08_Switch_Role</td><td><a href="#m0">Role_01_User</a></td><td rowspan="1">1665595117028</td><td rowspan="1">1317</td></tr><tr class="passedeven"><td><a href="#m1">Role_02_Admin</a></td><td rowspan="1">1665595118346</td><td rowspan="1">2626</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.nopcommerce.user.Level_09_Dynamic_Locator</td><td><a href="#m0">User_01_Register_Login</a></td><td rowspan="1">1666111393483</td><td rowspan="1">5342</td></tr><tr class="passedeven"><td><a href="#m1">User_02_Switch_Page</a></td><td rowspan="1">1666111398826</td><td rowspan="1">16752</td></tr><tr class="passedeven"><td><a href="#m2">User_03_Dynamic_Page_01</a></td><td rowspan="1">1666111415579</td><td rowspan="1">1039</td></tr></tbody>
 </table>
-<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_08_Switch_Role#Role_01_User</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.nopcommerce.user.Level_08_Switch_Role#Role_02_Admin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_09_Dynamic_Locator#User_01_Register_Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.nopcommerce.user.Level_09_Dynamic_Locator#User_02_Switch_Page</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.nopcommerce.user.Level_09_Dynamic_Locator#User_03_Dynamic_Page_01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
