--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,17 @@
                     <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_08_Switch_Role" class="method navigator-link" hash-for-method="Role_01_User">Role_01_User</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_09_Dynamic_Locator" class="method navigator-link" hash-for-method="User_01_Register_Login">User_01_Register_Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_08_Switch_Role" class="method navigator-link" hash-for-method="Role_02_Admin">Role_02_Admin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_09_Dynamic_Locator" class="method navigator-link" hash-for-method="User_02_Switch_Page">User_02_Switch_Page</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_09_Dynamic_Locator" class="method navigator-link" hash-for-method="User_03_Dynamic_Page_01">User_03_Dynamic_Page_01</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -125,21 +130,28 @@
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_08_Switch_Role</span>
+              <span class="class-name">com.nopcommerce.user.Level_09_Dynamic_Locator</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Role_01_User">
-                  </a> <!-- Role_01_User -->
-                  <span class="method-name">Role_01_User</span>
+                  <a name="User_01_Register_Login">
+                  </a> <!-- User_01_Register_Login -->
+                  <span class="method-name">User_01_Register_Login</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Role_02_Admin">
-                  </a> <!-- Role_02_Admin -->
-                  <span class="method-name">Role_02_Admin</span>
+                  <a name="User_02_Switch_Page">
+                  </a> <!-- User_02_Switch_Page -->
+                  <span class="method-name">User_02_Switch_Page</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="User_03_Dynamic_Page_01">
+                  </a> <!-- User_03_Dynamic_Page_01 -->
+                  <span class="method-name">User_03_Dynamic_Page_01</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -155,9 +167,9 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;NopCommerce&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.Level_08_Switch_Role&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.Level_09_Dynamic_Locator&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
 &lt;/suite&gt; &lt;!-- NopCommerce --&gt;
@@ -197,20 +209,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Role_02_Admin')
-data.setCell(0, 2, 'com.nopcommerce.user.Level_08_Switch_Role')
-data.setCell(0, 3, 2626);
+data.setCell(0, 1, 'User_02_Switch_Page')
+data.setCell(0, 2, 'com.nopcommerce.user.Level_09_Dynamic_Locator')
+data.setCell(0, 3, 16752);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Role_01_User')
-data.setCell(1, 2, 'com.nopcommerce.user.Level_08_Switch_Role')
-data.setCell(1, 3, 1317);
+data.setCell(1, 1, 'User_01_Register_Login')
+data.setCell(1, 2, 'com.nopcommerce.user.Level_09_Dynamic_Locator')
+data.setCell(1, 3, 5342);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'User_03_Dynamic_Page_01')
+data.setCell(2, 2, 'com.nopcommerce.user.Level_09_Dynamic_Locator')
+data.setCell(2, 3, 1039);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -236,22 +252,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.Level_08_Switch_Role</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.Level_09_Dynamic_Locator</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(firefox)</span>
+                <span class="method-name">beforeClass(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">Role_01_User</span>
-                <span class="method-start">4524 ms</span>
+                <span class="method-name">User_01_Register_Login</span>
+                <span class="method-start">2733 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Role_02_Admin</span>
-                <span class="method-start">5842 ms</span>
+                <span class="method-name">User_02_Switch_Page</span>
+                <span class="method-start">8076 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">User_03_Dynamic_Page_01</span>
+                <span class="method-start">24829 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">8469 ms</span>
+                <span class="method-start">25869 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
