--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="977370">  <td>22/10/18 23:51:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_09_Dynamic_Locator.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@265321659</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/18 23:52:19</td>   <td>24866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_01_Register_Login()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">User_01_Register_Login</td> 
-  <td>main@265321659</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/18 23:52:19</td>   <td>24869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_02_Switch_Page()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">User_02_Switch_Page</td> 
-  <td>main@265321659</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/18 23:52:19</td>   <td>24872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_03_Dynamic_Page_01()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@55b0dcab]">User_03_Dynamic_Page_01</td> 
-  <td>main@265321659</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/19 00:30:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_09_Dynamic_Locator.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@38afe297]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@896644936</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/19 00:30:26</td>   <td>3664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_01_Register_Login()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@38afe297]">User_01_Register_Login</td> 
+  <td>main@896644936</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/19 00:30:32</td>   <td>9410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_02_Switch_Page()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@38afe297]">User_02_Switch_Page</td> 
+  <td>main@896644936</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/19 00:30:34</td>   <td>11950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_03_Dynamic_Page_01()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@38afe297]">User_03_Dynamic_Page_01</td> 
+  <td>main@896644936</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/19 00:30:36</td>   <td>13002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_09_Dynamic_Locator.User_04_Dynamic_Page_02()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@38afe297]">User_04_Dynamic_Page_02</td> 
+  <td>main@896644936</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/19 00:30:36</td>   <td>13709</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_09_Dynamic_Locator.afterClass()[pri:0, instance:com.nopcommerce.user.Level_09_Dynamic_Locator@38afe297]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@896644936</td>   <td></td> </tr>
 </table>
