--- a/test-output/old/NopCommerce/classes.html
+++ b/test-output/old/NopCommerce/classes.html
@@ -4,26 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.Level_09_Dynamic_Locator</td>
+<td>com.jquery.datatable.Level_10_DataTable_DataGrid</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>User_04_Dynamic_Page_02</td>
+<td>Table_02</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>User_01_Register_Login</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>User_03_Dynamic_Page_01</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>User_02_Switch_Page</td>
+<td>Table_01_Paging</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
