--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">NopCommerce</th></tr>
-<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">14,317</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">11,474</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.nopcommerce.user.Level_09_Dynamic_Locator</td><td><a href="#m0">User_01_Register_Login</a></td><td rowspan="1">1666114226704</td><td rowspan="1">5745</td></tr><tr class="passedeven"><td><a href="#m1">User_02_Switch_Page</a></td><td rowspan="1">1666114232450</td><td rowspan="1">2539</td></tr><tr class="passedeven"><td><a href="#m2">User_03_Dynamic_Page_01</a></td><td rowspan="1">1666114234990</td><td rowspan="1">1052</td></tr><tr class="passedeven"><td><a href="#m3">User_04_Dynamic_Page_02</a></td><td rowspan="1">1666114236042</td><td rowspan="1">706</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.jquery.datatable.Level_10_DataTable_DataGrid</td><td><a href="#m0">Table_01_Paging</a></td><td rowspan="1">1667292615506</td><td rowspan="1">1497</td></tr><tr class="passedeven"><td><a href="#m1">Table_02</a></td><td rowspan="1">1667292617005</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_09_Dynamic_Locator#User_01_Register_Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.nopcommerce.user.Level_09_Dynamic_Locator#User_02_Switch_Page</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.nopcommerce.user.Level_09_Dynamic_Locator#User_03_Dynamic_Page_01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.nopcommerce.user.Level_09_Dynamic_Locator#User_04_Dynamic_Page_02</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Firefox</h2><h3 id="m0">com.jquery.datatable.Level_10_DataTable_DataGrid#Table_01_Paging</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.jquery.datatable.Level_10_DataTable_DataGrid#Table_02</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
