--- a/test-output/old/NopCommerce/classes.html
+++ b/test-output/old/NopCommerce/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Table_02</td>
+<td>Table_02_Enter_Header_Textbox</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
