--- a/test-output/index.html
+++ b/test-output/index.html
@@ -107,7 +107,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_10_DataTable_DataGrid" class="method navigator-link" hash-for-method="Table_02">Table_02</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_10_DataTable_DataGrid" class="method navigator-link" hash-for-method="Table_02_Enter_Header_Textbox">Table_02_Enter_Header_Textbox</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -137,9 +137,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Table_02">
-                  </a> <!-- Table_02 -->
-                  <span class="method-name">Table_02</span>
+                  <a name="Table_02_Enter_Header_Textbox">
+                  </a> <!-- Table_02_Enter_Header_Textbox -->
+                  <span class="method-name">Table_02_Enter_Header_Textbox</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -202,11 +202,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Table_01_Paging')
 data.setCell(0, 2, 'com.jquery.datatable.Level_10_DataTable_DataGrid')
-data.setCell(0, 3, 1497);
+data.setCell(0, 3, 1205);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Table_02')
+data.setCell(1, 1, 'Table_02_Enter_Header_Textbox')
 data.setCell(1, 2, 'com.jquery.datatable.Level_10_DataTable_DataGrid')
-data.setCell(1, 3, 1);
+data.setCell(1, 3, 344);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
@@ -244,15 +244,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">Table_01_Paging</span>
-                <span class="method-start">9176 ms</span>
+                <span class="method-start">10106 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Table_02</span>
-                <span class="method-start">10675 ms</span>
+                <span class="method-name">Table_02_Enter_Header_Textbox</span>
+                <span class="method-start">11317 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">10678 ms</span>
+                <span class="method-start">11663 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
