--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7888a2">  <td>22/11/01 15:50:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_01_Paging()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">Table_01_Paging</td> 
+<tr bgcolor="7888a2">  <td>22/11/01 16:45:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_01_Paging()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">Table_01_Paging</td> 
   <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/01 15:50:17</td>   <td>1499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_02()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">Table_02</td> 
+<tr bgcolor="7888a2">  <td>22/11/01 16:45:38</td>   <td>1211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_02_Enter_Header_Textbox()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">Table_02_Enter_Header_Textbox</td> 
   <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/01 15:50:17</td>   <td>1502</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_10_DataTable_DataGrid.afterClass()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">&lt;&lt;afterClass</td> 
+<tr bgcolor="7888a2">  <td>22/11/01 16:45:38</td>   <td>1557</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_10_DataTable_DataGrid.afterClass()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/01 15:50:06</td>   <td>-9171</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_10_DataTable_DataGrid.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="7888a2">  <td>22/11/01 16:45:27</td>   <td>-10100</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_10_DataTable_DataGrid.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
 </table>
