--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="977370">  <td>22/11/01 23:21:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_01_Paging()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@131ef10]">Table_01_Paging</td> 
-  <td>main@726379593</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/11/01 23:21:59</td>   <td>529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_02_Enter_Header_Textbox()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@131ef10]">Table_02_Enter_Header_Textbox</td> 
-  <td>main@726379593</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/11/01 23:22:03</td>   <td>4922</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_10_DataTable_DataGrid.afterClass()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@131ef10]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/11/01 23:21:54</td>   <td>-3816</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_10_DataTable_DataGrid.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@131ef10]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/11/02 15:15:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_03_Enter_Header_Textbox()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@609cd4d8]">Table_03_Enter_Header_Textbox</td> 
+  <td>main@960733886</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/11/02 15:18:35</td>   <td>163967</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_10_DataTable_DataGrid.afterClass()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@609cd4d8]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@960733886</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/11/02 15:15:42</td>   <td>-9320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_10_DataTable_DataGrid.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@609cd4d8]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@960733886</td>   <td></td> </tr>
 </table>
