--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_10_DataTable_DataGrid" class="method navigator-link" hash-for-method="Table_04_Enter_To_Textbox_At_Any_Row">Table_04_Enter_To_Textbox_At_Any_Row</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_10_DataTable_DataGrid" class="method navigator-link" hash-for-method="Table_04_Action_At_Any_Row">Table_04_Action_At_Any_Row</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Table_04_Enter_To_Textbox_At_Any_Row">
-                  </a> <!-- Table_04_Enter_To_Textbox_At_Any_Row -->
-                  <span class="method-name">Table_04_Enter_To_Textbox_At_Any_Row</span>
+                  <a name="Table_04_Action_At_Any_Row">
+                  </a> <!-- Table_04_Action_At_Any_Row -->
+                  <span class="method-name">Table_04_Action_At_Any_Row</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Table_04_Enter_To_Textbox_At_Any_Row')
+data.setCell(0, 1, 'Table_04_Action_At_Any_Row')
 data.setCell(0, 2, 'com.jquery.datatable.Level_10_DataTable_DataGrid')
-data.setCell(0, 3, 456);
+data.setCell(0, 3, 1201);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 456 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -227,12 +227,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">Table_04_Enter_To_Textbox_At_Any_Row</span>
-                <span class="method-start">11171 ms</span>
+                <span class="method-name">Table_04_Action_At_Any_Row</span>
+                <span class="method-start">10704 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">11630 ms</span>
+                <span class="method-start">11909 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
