--- a/test-output/index.html
+++ b/test-output/index.html
@@ -190,12 +190,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Table_04_Action_At_Any_Row')
 data.setCell(0, 2, 'com.jquery.datatable.Level_10_DataTable_DataGrid')
-data.setCell(0, 3, 1201);
+data.setCell(0, 3, 20914);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -228,11 +228,13 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">Table_04_Action_At_Any_Row</span>
-                <span class="method-start">10704 ms</span>
+                <span class="method-start">8641 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">afterClass</span>
-                <span class="method-start">11909 ms</span>
+                <span class="method-start">29558 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
