--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">NopCommerce</th></tr>
-<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">25,570</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">6,703</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.jquery.datatable.Level_10_DataTable_DataGrid</td><td><a href="#m0">Table_04_Action_At_Any_Row</a></td><td rowspan="1">1667489568137</td><td rowspan="1">21607</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.jquery.datatable.Level_11_Upload_Files</td><td><a href="#m0">Upload_01_One_File_Per_Time</a></td><td rowspan="1">1667548158582</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m1">Upload_02_Multi_Files_Per_Time</a></td><td rowspan="1">1667548158588</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Run on Firefox</h2><h3 id="m0">com.jquery.datatable.Level_10_DataTable_DataGrid#Table_04_Action_At_Any_Row</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Firefox</h2><h3 id="m0">com.jquery.datatable.Level_11_Upload_Files#Upload_01_One_File_Per_Time</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.jquery.datatable.Level_11_Upload_Files#Upload_02_Multi_Files_Per_Time</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
