--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-NopCommerce" class="navigator-link ">
-                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryTest.xml</span>
+                    <span>D:\eclipse_Workspace\Framework\resources\runJqueryUpload.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_10_DataTable_DataGrid" class="method navigator-link" hash-for-method="Table_04_Action_At_Any_Row">Table_04_Action_At_Any_Row</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_11_Upload_Files" class="method navigator-link" hash-for-method="Upload_01_One_File_Per_Time">Upload_01_One_File_Per_Time</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_11_Upload_Files" class="method navigator-link" hash-for-method="Upload_02_Multi_Files_Per_Time">Upload_02_Multi_Files_Per_Time</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -120,14 +125,21 @@
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.jquery.datatable.Level_10_DataTable_DataGrid</span>
+              <span class="class-name">com.jquery.datatable.Level_11_Upload_Files</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Table_04_Action_At_Any_Row">
-                  </a> <!-- Table_04_Action_At_Any_Row -->
-                  <span class="method-name">Table_04_Action_At_Any_Row</span>
+                  <a name="Upload_01_One_File_Per_Time">
+                  </a> <!-- Upload_01_One_File_Per_Time -->
+                  <span class="method-name">Upload_01_One_File_Per_Time</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Upload_02_Multi_Files_Per_Time">
+                  </a> <!-- Upload_02_Multi_Files_Per_Time -->
+                  <span class="method-name">Upload_02_Multi_Files_Per_Time</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,18 +147,18 @@
         </div> <!-- panel NopCommerce -->
         <div panel-name="test-xml-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryTest.xml</span>
+            <span class="header-content">D:\eclipse_Workspace\Framework\resources\runJqueryUpload.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;NopCommerce&quot;&gt;
-  &lt;parameter name=&quot;url&quot; value=&quot;https://www.jqueryscript.net/demo/jQuery-Dynamic-Data-Grid-Plugin-appendGrid/&quot;/&gt;
+  &lt;parameter name=&quot;url&quot; value=&quot;https://blueimp.github.io/jQuery-File-Upload/&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.jquery.datatable.Level_10_DataTable_DataGrid&quot;/&gt;
+      &lt;class name=&quot;com.jquery.datatable.Level_11_Upload_Files&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
 &lt;/suite&gt; &lt;!-- NopCommerce --&gt;
@@ -186,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Table_04_Action_At_Any_Row')
-data.setCell(0, 2, 'com.jquery.datatable.Level_10_DataTable_DataGrid')
-data.setCell(0, 3, 21607);
+data.setCell(0, 1, 'Upload_01_One_File_Per_Time')
+data.setCell(0, 2, 'com.jquery.datatable.Level_11_Upload_Files')
+data.setCell(0, 3, 4);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Upload_02_Multi_Files_Per_Time')
+data.setCell(1, 2, 'com.jquery.datatable.Level_11_Upload_Files')
+data.setCell(1, 3, 1);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 seconds</span>
+              <span class="suite-total-time">Total running time: 5 ms</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -221,18 +237,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.jquery.datatable.Level_10_DataTable_DataGrid</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.jquery.datatable.Level_11_Upload_Files</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(chrome, https://www.jqueryscript.net/demo/jQuery-Dynamic-Data-Grid-Plugin-appendGrid/)</span>
+                <span class="method-name">beforeClass(firefox, https://blueimp.github.io/jQuery-File-Upload/)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">Table_04_Action_At_Any_Row</span>
-                <span class="method-start">3329 ms</span>
+                <span class="method-name">Upload_01_One_File_Per_Time</span>
+                <span class="method-start">5908 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Upload_02_Multi_Files_Per_Time</span>
+                <span class="method-start">5914 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">24941 ms</span>
+                <span class="method-start">5916 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
