--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="977370">  <td>22/11/03 22:32:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_04_Action_At_Any_Row()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@38afe297]">Table_04_Action_At_Any_Row</td> 
-  <td>main@896644936</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/11/03 22:33:09</td>   <td>21613</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_10_DataTable_DataGrid.afterClass()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@38afe297]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@896644936</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/11/03 22:32:44</td>   <td>-3324</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_10_DataTable_DataGrid.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@38afe297]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@896644936</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/11/04 14:49:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_11_Upload_Files.Upload_01_One_File_Per_Time()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">Upload_01_One_File_Per_Time</td> 
+  <td>main@681008168</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/11/04 14:49:18</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_11_Upload_Files.Upload_02_Multi_Files_Per_Time()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">Upload_02_Multi_Files_Per_Time</td> 
+  <td>main@681008168</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/11/04 14:49:18</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_11_Upload_Files.afterClass()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/11/04 14:49:12</td>   <td>-5901</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_11_Upload_Files.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
 </table>
