--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7888a2">  <td>22/11/04 14:49:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_11_Upload_Files.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/04 14:49:18</td>   <td>5901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_11_Upload_Files.Upload_01_One_File_Per_Time()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">Upload_01_One_File_Per_Time</td> 
-  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/04 14:49:18</td>   <td>5907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_11_Upload_Files.Upload_02_Multi_Files_Per_Time()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">Upload_02_Multi_Files_Per_Time</td> 
-  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/04 14:49:18</td>   <td>5909</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_11_Upload_Files.afterClass()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
+<tr bgcolor="97fbdb">  <td>22/11/15 17:12:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_14_Log_ReportNG.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@52b1beb6]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489743810</td>   <td></td> </tr>
+<tr bgcolor="97fbdb">  <td>22/11/15 17:12:20</td>   <td>5819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_ReportNG.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@52b1beb6]">User_01_Register</td> 
+  <td>main@1489743810</td>   <td></td> </tr>
+<tr bgcolor="97fbdb">  <td>22/11/15 17:12:24</td>   <td>9725</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_14_Log_ReportNG.afterClass()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@52b1beb6]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489743810</td>   <td></td> </tr>
 </table>
