--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Facebook" class="navigator-link">
-              <span class="suite-name border-passed">Facebook</span>
+            <a href="#" panel-name="suite-NopCommerce" class="navigator-link">
+              <span class="suite-name border-passed">NopCommerce</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Facebook" class="navigator-link ">
-                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runFacebookTest.xml</span>
+                  <a href="#" panel-name="test-xml-NopCommerce" class="navigator-link ">
+                    <span>D:\eclipse_Workspace\Framework\resources\runNopComMerceTest.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Facebook" class="navigator-link ">
+                  <a href="#" panel-name="testlist-NopCommerce" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Facebook" class="navigator-link ">
+                  <a href="#" panel-name="group-NopCommerce" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Facebook" class="navigator-link ">
+                  <a href="#" panel-name="times-NopCommerce" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Facebook" class="navigator-link ">
+                  <a href="#" panel-name="reporter-NopCommerce" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Facebook" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-NopCommerce" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Facebook" class="navigator-link ">
+                  <a href="#" panel-name="chronological-NopCommerce" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -91,31 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Facebook" class="hide-methods passed suite-Facebook"> (hide)</a> <!-- hide-methods passed suite-Facebook -->
-                      <a href="#" panel-name="suite-Facebook" class="show-methods passed suite-Facebook"> (show)</a> <!-- show-methods passed suite-Facebook -->
+                      <a href="#" panel-name="suite-NopCommerce" class="hide-methods passed suite-NopCommerce"> (hide)</a> <!-- hide-methods passed suite-NopCommerce -->
+                      <a href="#" panel-name="suite-NopCommerce" class="show-methods passed suite-NopCommerce"> (show)</a> <!-- show-methods passed suite-NopCommerce -->
                     </span>
-                    <div class="method-list-content passed suite-Facebook">
+                    <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Facebook" title="com.facebook.register.Level_13_Element_Undisplayed" class="method navigator-link" hash-for-method="TC_01_Verify_Element_Displayed">TC_01_Verify_Element_Displayed</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_14_Log_ReportNG" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Facebook" title="com.facebook.register.Level_13_Element_Undisplayed" class="method navigator-link" hash-for-method="TC_02_Verify_Element_Undisplayed_In_DOM">TC_02_Verify_Element_Undisplayed_In_DOM</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Facebook" title="com.facebook.register.Level_13_Element_Undisplayed" class="method navigator-link" hash-for-method="TC_03_Verify_Element_Undisplayed_Not_In_DOM">TC_03_Verify_Element_Undisplayed_Not_In_DOM</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Facebook -->
+                    </div> <!-- method-list-content passed suite-NopCommerce -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -126,63 +116,45 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Facebook" class="panel Facebook">
-          <div class="suite-Facebook-class-passed">
+        <div panel-name="suite-NopCommerce" class="panel NopCommerce">
+          <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.facebook.register.Level_13_Element_Undisplayed</span>
+              <span class="class-name">com.nopcommerce.user.Level_14_Log_ReportNG</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Verify_Element_Displayed">
-                  </a> <!-- TC_01_Verify_Element_Displayed -->
-                  <span class="method-name">TC_01_Verify_Element_Displayed</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_02_Verify_Element_Undisplayed_In_DOM">
-                  </a> <!-- TC_02_Verify_Element_Undisplayed_In_DOM -->
-                  <span class="method-name">TC_02_Verify_Element_Undisplayed_In_DOM</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_03_Verify_Element_Undisplayed_Not_In_DOM">
-                  </a> <!-- TC_03_Verify_Element_Undisplayed_Not_In_DOM -->
-                  <span class="method-name">TC_03_Verify_Element_Undisplayed_Not_In_DOM</span>
+                  <a name="User_01_Register">
+                  </a> <!-- User_01_Register -->
+                  <span class="method-name">User_01_Register</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Facebook-class-passed -->
-        </div> <!-- panel Facebook -->
-        <div panel-name="test-xml-Facebook" class="panel">
+          </div> <!-- suite-NopCommerce-class-passed -->
+        </div> <!-- panel NopCommerce -->
+        <div panel-name="test-xml-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runFacebookTest.xml</span>
+            <span class="header-content">D:\eclipse_Workspace\Framework\resources\runNopComMerceTest.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Facebook&quot;&gt;
-  &lt;parameter name=&quot;url&quot; value=&quot;https://www.facebook.com//&quot;/&gt;
-  &lt;listeners&gt;
-    &lt;listener class-name=&quot;commonJquery.MethodListener&quot;/&gt;
-  &lt;/listeners&gt;
+&lt;suite name=&quot;NopCommerce&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.facebook.register.Level_13_Element_Undisplayed&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.Level_14_Log_ReportNG&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
-&lt;/suite&gt; &lt;!-- Facebook --&gt;
+&lt;/suite&gt; &lt;!-- NopCommerce --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Facebook" class="panel">
+        <div panel-name="testlist-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Facebook</span>
+            <span class="header-content">Tests for NopCommerce</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
@@ -192,90 +164,74 @@
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Facebook" class="panel">
+        <div panel-name="group-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Facebook</span>
+            <span class="header-content">Groups for NopCommerce</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Facebook" class="panel">
+        <div panel-name="times-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Facebook</span>
+            <span class="header-content">Times for NopCommerce</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Facebook');
-function tableData_Facebook() {
+suiteTableInitFunctions.push('tableData_NopCommerce');
+function tableData_NopCommerce() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_03_Verify_Element_Undisplayed_Not_In_DOM')
-data.setCell(0, 2, 'com.facebook.register.Level_13_Element_Undisplayed')
-data.setCell(0, 3, 13134);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_01_Verify_Element_Displayed')
-data.setCell(1, 2, 'com.facebook.register.Level_13_Element_Undisplayed')
-data.setCell(1, 3, 3776);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_02_Verify_Element_Undisplayed_In_DOM')
-data.setCell(2, 2, 'com.facebook.register.Level_13_Element_Undisplayed')
-data.setCell(2, 3, 3147);
-window.suiteTableData['Facebook']= { tableData: data, tableDiv: 'times-div-Facebook'}
+data.setCell(0, 1, 'User_01_Register')
+data.setCell(0, 2, 'com.nopcommerce.user.Level_14_Log_ReportNG')
+data.setCell(0, 3, 3903);
+window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
-              <div id="times-div-Facebook">
-              </div> <!-- times-div-Facebook -->
+              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <div id="times-div-NopCommerce">
+              </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Facebook" class="panel">
+        <div panel-name="reporter-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Facebook</span>
+            <span class="header-content">Reporter output for NopCommerce</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Facebook" class="panel">
+        <div panel-name="ignored-methods-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Facebook" class="panel">
+        <div panel-name="chronological-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.facebook.register.Level_13_Element_Undisplayed</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.Level_14_Log_ReportNG</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(chrome, https://www.facebook.com//)</span>
+                <span class="method-name">beforeClass(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_01_Verify_Element_Displayed</span>
-                <span class="method-start">3354 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_02_Verify_Element_Undisplayed_In_DOM</span>
-                <span class="method-start">7132 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_03_Verify_Element_Undisplayed_Not_In_DOM</span>
-                <span class="method-start">10279 ms</span>
+                <span class="method-name">User_01_Register</span>
+                <span class="method-start">5828 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">23413 ms</span>
+                <span class="method-start">9734 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
