--- a/test-output/old/NopCommerce/classes.html
+++ b/test-output/old/NopCommerce/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.jquery.datatable.Level_11_Upload_Files</td>
+<td>com.nopcommerce.user.Level_14_Log_ReportNG</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Upload_02_Multi_Files_Per_Time</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Upload_01_One_File_Per_Time</td>
+<td>User_01_Register</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
